--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gateio/gateapi-php",
+    "name": "spppio/gateapi-php",
     "version": "5.24.0",
     "description": "Welcome to Gate.io API  APIv4 provides spot, margin and futures trading operations. There are public APIs to retrieve the real-time market statistics, and private APIs which needs authentication to trade on user's behalf.",
     "keywords": [
